--- a/styles/bootstrap/_variables.scss
+++ b/styles/bootstrap/_variables.scss
@@ -492,7 +492,7 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1320px
+  xxl: 1380px //1320
 ) !default;
 // scss-docs-end container-max-widths
 
