--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,7 @@
 @import './abstract/reset';
 @import './abstract/icons';
 @import './abstract/base';
+@import './abstract/main';
+@import './components/header';
+@import './components/card-video';
 
