- Implementação de classe WPPosts para gerenciamento de requisições, com armazenamento dos dados em arquivo .json para redução do número de requisições

--- a/styles/abstract/_base.scss
+++ b/styles/abstract/_base.scss
@@ -81,7 +81,7 @@ h1, h2{
   line-height: 16px;
 }
 
-button{
+button, .bt{
     cursor: pointer;
     background: none;
     color: $color-gray-700;
