--- a/styles/components/_card-video.scss
+++ b/styles/components/_card-video.scss
@@ -69,6 +69,10 @@
     .infos{
         padding: 16px;
         background-color: $color-gray-800;
+        min-height: 101px;
+        @media(max-width: 767px){
+            min-height: unset;
+        }
         .cat{
             display: block;
             text-transform: uppercase;
@@ -151,6 +155,7 @@
                 background: none;
                 padding: 0;
                 max-width: 715px;
+                min-height: unset;
                 h2{
                     font-size: $font-feed-1;
                     line-height: 30px;
